# godot-vmc-lib

./: .gitignore  .gitmodules  CMakeLists.txt  GodotVMCLib.gdnlib  README.md  VMCLib.gdnlib  VMCReceiver.gdns  godot_vmc.gdextension
CI/: build_linux.sh  create_zip.sh  linux_i686.toolchain.cmake
cmake/: FindOSCPack.cmake  gd_library_data.gdextension.in
godot_vmc_lib/: vmc_godot.cpp  vmc_godot.h  vmc_packets.cpp  vmc_packets.h  vmc_receiver.cpp  vmc_receiver.h
vmc_godot/: singleton.cpp  singleton.h  vmc_avatar_controller.cpp  vmc_avatar_controller.h  vmc_comm.cpp  vmc_comm.h  vmc_dictionary.cpp  vmc_dictionary.h  vmc_godot.cpp  vmc_godot.h  vmc_godot_impl.cpp  vmc_godot_impl.h  vmc_msg_process_queue.cpp  vmc_msg_process_queue.h  vmc_receiver.cpp  vmc_receiver.h
